Correção nome Projeto Freedcodecamp

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <h1>Projetos</h1>
                 <p>
-                    <a href="https://github.com/JuniorGildo/Freecodecamp"> Freecodecamp Cat Photos App</a>
+                    <a href="https://github.com/JuniorGildo/Freecodecamp"> Freecodecamp</a>
                 </p>
                 <p>
                     <a href="https://github.com/JuniorGildo/Apresentacoes">Apresentações</a>
