--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="pt-BR">
 
 <!-- O elemento HEAD é o local onde vc informa algumas configurações importantes do seu site. Estas informação não aparecerão no site, mas são de extrema importância para que ele funcione bem -->
 
